<resources>
    <string name="app_name">Sticko</string>
    <string name="bienvenue">BIENVENUE</string>
    <string name="email">Email</string>
    <string name="email_or_Nom_utilisateur">Email ou nom d\'utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_souvenir_de_moi">Se souvenir de moi</string>
    <string name="mot_de_passe_oublier">Mot de passe oublier?</string>
    <string name="je_m_inscris">Je m’inscris</string>
    <string name="creer_min_compte">Créer mon compte</string>
    <string name="utilisateur">Nom utilisateur</string>
    <string name="confirmer_mot_de">Confirmer mot de passe</string>
    <string name="j_accept_les">J’accepte les</string>
    <string name="CGUV"><font color='#FF8500'>CGUV</font></string>
    <string name="tu_as_deja_un_compte">Tu as déjà un compte? </string>
    <string name="je_me_connecte">Je me connecte</string>
    <string name="actualiser_mot_de_passe">ACTUALISER MOT DE PASSE</string>
    <string name="forgot_password_desciption">Renseigne le mail associé à ton compte, on vous Envoie un code de 6 chiffres pour actualiser votre mot
de passe</string>
    <string name="update_password">CRÉER UN NOUVEAU MOT DE PASSE</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="confirmer">Confimer</string>
    <string name="verification_text">CODE DE VÉRIFICATION</string>
    <string name="verification_description">Renseigne le code envoyé par mail</string>
    <string name="verifier">Vérifier</string>
    <string name="score">Score</string>
    <string name="following">FOLLOWING</string>
    <string name="bio_passions_message">Biographie, passions, message…</string>
    <string name="follow">+ FOLLOW</string>
    <string name="unfollow">UNFOLLOW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="disconnect">DÉCONNEXION</string>
    <string name="buy_a_sticko">Acheter un sticko</string>
    <string name="profile">PROFIL</string>
    <string name="tutorial">TUTORIEL</string>
    <string name="activate_sticko">Activer mon sticko</string>
    <string name="deactivate_account">Désactiver mon compte</string>
    <string name="have_not_followed">Vous n’avez suivis aucun compte pour le moment</string>
    <string name="activation_instructions">Place ton sticko à l’arrière de ton téléphone et presse sur le bouton<b> <font color='#FF8500' >activer mon sticko</font></b> </string>
    <string name="heading_activate_sticko">ACTIVE TON STICKO</string>
    <string name="activated_sticko">Sticko activé</string>
    <string name="title_activity_follows">Follows</string>
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Followers</string>
    <string name="remove">Remove</string>
    <string name="follow_user">Follow</string>
    <string name="title_activity_connections">Connections</string>
    <string name="new_links">Nouveaux liens</string>
    <string name="active_links">Liens actifs</string>
    <string name="instgram">Instagram</string>
    <string name="new_link_header_description">Renseigne ton ID d’utilisateur</string>
    <string name="passer">passer</string>
    <string name="have_not_account">Pas encore de compte?</string>
    <string name="send_code">Envoyer le code</string>
    <string name="change_photo">Change ta photo de profil</string>
    <string name="username">Nom d’utilisateur</string>
    <string name="bio">Bio</string>
    <string name="theme">Thèmes</string>
    <string name="deactivate_account_alert">Êtes-vous sure de vouloir désactiver votre compte?\n<b> Vous perderez toutes vos données</b></string>
    <string name="add_new_link_des">Ajoutes les liens que tu veux partager sur ton profil</string>
    <string name="un_sticko">Acheter un sticko</string>
    <string name="se_connector">Je me connecte</string>
    <string name="add_sticko">@sticko</string>
    <string name="title_activity_tutorials_screens">TutorialsScreens</string>
    <string name="screen1">Screen_one</string>
    <string name="screen2">Screen_two</string>
    <string name="screen3">Screen_three</string>
    <string name="screen4">Screen_four</string>
    <string name="screen5">Screen_five</string>
    <string name="screen6">Screen_six</string>
    <string name="screen7">Screen_seven</string>
    <string name="screen8">Screen_eight</string>
    <string name="screen9">Screen_nine</string>
    <string name="screen_one_text">CONNECTE TOI OU\n CRÉE TON COMPTE</string>
    <string name="screen_two_text">CONFIGURE TON PROFIL</string>
    <string name="screen_three_text">ACTIVE TON STICKO</string>
    <string name="screen_four_text">AJOUTE LES LIENS QUE TU VEUX PARTAGER SUR TON PROFIL</string>
    <string name="screen_five_text">UNE FOIS TON PROFIL EN PLACE TU PEUX</string>
    <string name="screen_six_text_1">AJOUTER DE NOUVEAUX LIENS SUR TON PROFIL</string>
    <string name="screen_six_text_2">PARTAGER LE LIEN DE TON PROFIL</string>
    <string name="screen_eight_text">FOLLOW UN CONTACT</string>
    <string name="screen_ten_text">A chaque fois que tu scannes un Profil tu collecteS 1 point</string>
    <string name="screen10">screen10</string>
    <string name="screen_nine_text">CONSULTER LA LISTE DES PERSONNES QUE TU FOLLOW</string>
    <string name="top_50">Top 50</string>
    <string name="contacter_sticko">CONTACTER STICKO</string>
    <string name="profile_url">profile.sticko.fr/username</string>
    <string name="user_name">Nom*</string>
    <string name="user_phone_no">Numéro de téléphone</string>
    <string name="user_dob">Date de naissance</string>
    <string name="address">Adresse</string>
    <string name="edt_message">Message</string>
    <string name="contacter_name">Nom</string>
    <string name="contacter_phone">Téléphone</string>
    <string name="username_profile">Profile.sticko.fr/user/username</string>
    <string name="share_profile_link">Share my profile link</string>
    <string name="add_qr_wallet">Add QR to wallet</string>
    <string name="sticko_card">STICKO CARD</string>
    <string name="hide_profile_link">MASQUER UN LIEN SUN TON PROFIL</string>
    <string name="delete_profile_link">EFFACER UN LIEN SUR TON PROFIL</string>
</resources>