<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".ForgotPassword.ForgotPasswordActivity">
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_icon"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_back"
        android:scrollbarThumbVertical="@null">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:layout_marginEnd="@dimen/margin_end"
            android:focusable="true">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:src="@drawable/email_icon" />

            <TextView
                android:id="@+id/tv_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_logo"
                android:layout_marginTop="27dp"
                android:text="@string/actualiser_mot_de_passe"
                android:theme="@style/heading_text_style" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_heading"
                android:layout_marginTop="@dimen/margin_top_30"
                android:fontFamily="@font/d_din"
                android:textAllCaps="false"
                android:gravity="center"
                android:lineSpacingExtra="7dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/forgot_password_desciption"
                android:textColor="@color/hint_color" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_description"
                android:layout_marginTop="@dimen/button_margin_top"
                android:autofillHints=""
                android:minHeight="55dp"
                android:textColor="@color/white"
                android:background="@drawable/edt_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:theme="@style/edit_text_style" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_email"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:background="@drawable/button_background"
                android:text="@string/send_code"
                android:theme="@style/button_style" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>